objects/ssot__LocationGroupAssignment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Location Group id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationGroupId__c</fullName>
        <label>Location Group</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009436810_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LocationGroupAssignment_LocationId_m_rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>LocationGroupAssignment_LocationId_m_rel</relationshipLabel>
        <relationshipName>rel_1702009436810_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009447408_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LocationGroupAssignment_LocationGrou_rel</label>
        <referenceTo>ssot__LocationGroup__dlm</referenceTo>
        <relationshipLabel>LocationGroupAssignment_LocationGrou_rel</relationshipLabel>
        <relationshipName>rel_1702009447408_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>